--- a/BPM.html
+++ b/BPM.html
@@ -3,17 +3,80 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Otonashi</title>
+    <title>Tempo</title>
     <style>
+        * {
+            outline: none;
+        }
+
         body {
             margin: 0;
             padding: 0;
         }
-        .Main {
-            width: 60%;
-            max-width: 800px;
-            margin: 50px auto;
+
+        .Title {
+            padding: 30px 40px 0px 40px;
         }
+
+        @media(min-width:651px) { /* Desktop */
+            .Main {
+                width: 60%;
+                max-width: 800px;
+                margin: 50px auto;
+                font-size: 14px;
+                border-radius: 20px;
+                box-shadow: 0 0px #e5e5e5, 0 0 15px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.05);
+            }
+        }
+        @media(max-width:650px) { /* Mobile */
+            .Main {
+                width: 100%;
+                font-size: 14px;
+            }
+        }
+
+        .Block {
+            padding: 0 40px;
+            margin: 20px 0;
+        }
+
+        .Footer {
+            padding: 20px 0;
+            background: linear-gradient(180deg, white, #fafafa);
+            border-radius: 0 0 20px 20px;
+        }
+
+        .Copyright {
+            font-size: 12px; text-align: center; line-height: 25px; color: #ccc;
+        }
+
+        .Input {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100px;
+            opacity: 0;
+        }
+
+        .InputButton {
+            position: relative;
+            border: 1px dashed #ddd;
+            width: 100%; height: 100px;
+            line-height: 100px;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        .InputButton:hover {
+            background-color: #00000005;
+        }
+
+        .InputButtonLabel {
+            width: 100%;
+            color: #666;
+            font-size: 12px;
+            text-align: center;
+        }
+
         a {
             color: inherit;
             text-decoration: none;
@@ -52,25 +115,41 @@
 </head>
 <body>
 <div class="Main">
+    <div class="Title">
+        <span style="font-size: 24px; font-weight: bold;">
+            🎵 Tempo<span style="font-size: 18px; font-weight: bold; color: #ccc;"> / BPM Analyzer</span>
+        </span>
+
+        <div style="float: right; right: 0; margin-top: 5px;">
+            <a style="border-bottom: none;" href="https://github.com/mikukonai/Tempo"><img alt="GitHub stars" src="https://img.shields.io/github/stars/mikukonai/Tempo?style=social"></a>
+        </div>
+    </div>
     <div style="font-size: 18px; margin: 20px 0; color: #222; font-weight: bold;">
-        🎵 BPM Analyser
+        
     </div>
 
-    <div style="text-align: left; font-size: 14px; margin: 10px 0; padding: 5px 10px; border-radius: 5px; background: #f0f0f0;">
-        <p><span style="font-size: 13px; color: #aaa;">音频数据仅在浏览器内部处理，可查看本页代码以了解实现详情。</span></p>
-        <p></p><b>打开音频文件：</b><input type="file" id="fileSelector" name="files[]" multiple=""></p>
+    <div class="Block">
+        <div class="InputButton" id="inputButton">
+            <input type="file" id="fileSelector" name="files" class="Input">
+            <div id="inputButtonLabel" class="InputButtonLabel">
+                <div style="line-height: 0px; margin-top: 22px;">
+                    <svg t="1590511838623" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="23587" width="30" height="30"><path d="M777.846 119.65l-422.479 80.896c-22.016 4.333-37.809 23.592-37.77 45.923v449.339c-33.83-13.588-78.06-13.706-121.068 2.836-73.925 28.435-116.066 95.271-94.168 149.267 21.897 53.957 99.564 74.713 173.45 46.277 62.345-24.024 102.124-75.303 99.879-123.195V360.212l371.712-71.208V602.9c-33.792-13.627-78.14-13.785-121.147 2.796-73.886 28.475-115.988 95.31-94.13 149.268 21.898 53.957 99.486 74.712 173.332 46.277 61.204-23.592 100.628-73.531 99.88-120.675h0.157V142.572a23.237 23.237 0 0 0-27.57-22.922z" fill="#bbbbbb" p-id="23588"></path></svg>
+                </div>
+                <div style="line-height: 30px;">选择输入文件...</div>
+            </div>
+        </div>
+
+        <div id="output" class="output"></div>
+
+        <div style="margin: 10px 0;">
+            <button id="play" data-state="stopped"><span id="playLabel">开始分析并播放</span></button>
+            <button id="refresh" onclick="window.location.reload();">刷新</button>
+        </div>
     </div>
 
-    <div id="output" class="output"></div>
-
-    <div style="margin: 10px 0;">
-        <button id="play" data-state="stopped"><span id="playLabel">开始分析并播放</span></button>
-        <button id="refresh" onclick="window.location.reload();">刷新</button>
-    </div>
-
-    <div style="text-align: center; font-size: 13px; color:#888888; margin: 20px auto; line-height: 20px;">
-        <div><a href="https://github.com/mikukonai/BPM-Analyser">GitHub</a></div>
-    </div>
+    <footer class="Footer">
+        <div class="Copyright">&copy; 2016-2020 Mikukonai</div>
+    </footer>
 </div>
 
 <script src="./script/jquery.min.js"></script>
